@startuml

' Use orthoganal arrows
skinparam linetype ortho
' Set box spacing in the X plane
skinparam nodesep 100
' Set box spacing in the Y plane
skinparam ranksep 100

title Statemachine Model v1.0

' Classes
class StateType <<Enum>> {
    INVALID
    SIMPLE
    COMPOSITE
}
class Entity {
    id: str
    description: Optional[str]
}
class StateMachine <<Entity>> {

}
class Region <<Entity>>
class Vertex <<Entity>> {
    stereotype: Optional[str]
}
class State {

}
class InitialState
class FinalState
class PseudoState {

}
class Choice
class Transition <<Entity>> {
    stereotype: Optional[str]
}
class Event <<Entity>> {
    text: str
}
class Guard <<Entity>> {
    condition: str
}
class Action <<Entity>> {
    text: str
}
' StateMachine relations
StateMachine "1..*" *-right- "1" Region

' Region relations
Region "1" *-right- "0..*" Vertex
Region *-- "0..*" Transition

' Vertex relations
Vertex "2" o-- "0..*" Transition

' State relations
Vertex <|-- State
State *-- "0..2" Action 
State <|-- InitialState
State <|-- FinalState

' Psuedostate relations
Vertex <|-- PseudoState
PseudoState <|-- Choice

' Transition relations
Transition *-- "0..1" Event
Transition *-- "0..1" Guard
Transition *-- "0..1" Action

@enduml